<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.knbhatt.nainitour1.About">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historyname"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:paddingTop="@dimen/aboutpaddingtop"
        android:textStyle="bold"
        android:textSize="@dimen/abouttextsize"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:paddingTop="@dimen/aboutpaddingtop"
        android:textSize="@dimen/abouttextsize"
        android:textStyle="italic"
        android:paddingBottom="@dimen/aboutpaddingbottom"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutname"
        android:textSize="@dimen/abouttextsize"
        android:textStyle="bold"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="@dimen/abouttextsize"
        android:paddingLeft="@dimen/aboutpaddingtop"
        android:paddingTop="@dimen/aboutpaddingtop"
        android:textStyle="italic"
        android:textColor="@color/white"/>
</LinearLayout>
    </ScrollView>