<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.knbhatt.nainitour1.HowToReach">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:layout_marginTop="@dimen/aboutpaddingleft">
        <ImageView
            android:layout_width="@dimen/reachwidth"
            android:layout_height="@dimen/reachheight"
            android:src="@drawable/air"
            android:layout_marginRight="@dimen/aboutpaddingleft"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air"
            android:textColor="@color/white"
            android:textSize="@dimen/abouttextsize"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/padding"
        android:textSize="@dimen/abouttextsize"
        android:text="@string/byair"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:layout_marginTop="@dimen/aboutpaddingtop">
        <ImageView
            android:layout_width="@dimen/reachwidth"
            android:layout_height="@dimen/reachheight"
            android:src="@drawable/train"
            android:layout_marginRight="@dimen/aboutpaddingleft"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train"
            android:textColor="@color/white"
            android:textSize="@dimen/abouttextsize"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:layout_marginTop="@dimen/padding"
        android:textColor="@color/white"
        android:textSize="@dimen/abouttextsize"
        android:text="@string/bytrain"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:layout_marginTop="@dimen/aboutpaddingtop">
        <ImageView
            android:layout_width="@dimen/reachwidth"
            android:layout_height="@dimen/reachheight"
            android:src="@drawable/road"
            android:layout_marginRight="@dimen/aboutpaddingleft"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/road"
            android:textColor="@color/white"
            android:textSize="@dimen/abouttextsize"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/aboutpaddingleft"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/padding"
        android:textSize="@dimen/abouttextsize"
        android:text="@string/bybus"/>

</LinearLayout>
</ScrollView>