<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layoutbg"
   >
    <TextView
        android:id="@+id/placename"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height1"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/nainilake"
        android:textSize="@dimen/textsize2"

        android:textAlignment="center"/>
    <ImageView
        android:id="@+id/nainiimage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageheight"
        android:src="@drawable/nainilake"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="@dimen/aboutpaddingleft">
       <ImageView
           android:layout_width="@dimen/width1"
           android:layout_height="@dimen/contact"
           android:src="@drawable/address"
           android:layout_marginLeft="@dimen/aboutpaddingleft"/>
       <TextView
           android:id="@+id/address"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/address"
           android:textColor="@color/white"
           android:textSize="@dimen/abouttextsize"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width1"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding"
        >
        <ImageView
            android:layout_width="@dimen/width1"
            android:layout_height="@dimen/contact"
            android:src="@drawable/timing"
            android:layout_marginLeft="@dimen/aboutpaddingleft"/>
        <TextView
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/timing"
            android:textColor="@color/white"
            android:textSize="@dimen/abouttextsize"
            />
    </LinearLayout>
    </LinearLayout>